# zyth

./: .gitignore  BENCHMARKS.md  INHERITANCE_IMPLEMENTATION.md  Makefile  README.md  bench_channels_go  bench_computational_go  bench_computational_results.txt  bench_concurrency_go  bench_fib  bench_fib.hash  bench_scheduler_go  bench_string  bench_string.hash  bench_tokendagger.py  build.zig  debug_test  pyproject.toml  scan_tests.sh  test.db  test_compile.py  test_comprehensive_correctness.py  test_eval_expr.py  test_eval_var.py  test_exec.py  test_import_scan.py  test_inline  test_print_complete.py
benchmarks/: fibonacci.py  fibonacci_results.md  json_bench.py  list_methods_results.md  list_ops_results.md  loop_sum_results.md  results.md  string_concat.py  string_concat_results.md  string_results.md
docs/: MONOREPO_STRUCTURE.md  REFACTORING_PLAN.md
examples/: DISTRIBUTION.md  README_NUMPY_STATUS.md  array_operations.py  bench_channels.py  bench_channels_go.go  bench_computational.py  bench_computational_go.go  bench_computational_rust.rs  bench_concurrency.py  bench_concurrency_go.go  bench_dict.py  bench_large.py  bench_medium.py  bench_scheduler.py  bench_scheduler_go.go  bench_small.py  bench_string.py  benchmark_flask.py  builtin_enumerate.py  builtin_range.py  builtin_zip.py  builtins_numeric.py  class_counter.py  class_counter_no_types.py  class_inherit_shape.py  class_inherit_simple.py  class_inherit_vehicle.py  class_multiple.py  class_simple_no_types.py  comprehensive_demo.py  comptime_arithmetic.py  comptime_lists.py  comptime_strings.py  fixed_arrays.py  (+73 more)
(+447 files in other folders)
