[project]
name = "pyaot"
version = "0.1.0"
description = "Python-to-Zig AOT compiler"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run tests in parallel
addopts = "-n auto --dist loadgroup -v"
# Timeout for compilation
timeout = 300
